# decijax

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: build_docs.yml  pr_greeting.yml  ruff.yml  stale_prs.yml  tests.yml
docs/: index.md
docs/scripts/: convert_examples.py  gen_api.py
examples/: decision_making.py  intro_to_bo.py  test.ipynb  utils.py
src/decijax/: __about__.py  __init__.py  acquisition_maximizer.py  decision_maker.py  posterior_handler.py  search_space.py  typing.py  utility_maximizer.py  utils.py
src/decijax/acquisition_functions/: __init__.py  base.py  expected_improvement.py  probability_of_improvement.py  thompson_sampling.py
src/decijax/models/: __init__.py  base.py  builder.py  distributions.py  gps.py
src/decijax/test_functions/: __init__.py  continuous_functions.py  non_conjugate_functions.py
src/decijax/utility_functions/: __init__.py  base.py  expected_improvement.py  probability_of_improvement.py  thompson_sampling.py
tests/: conftest.py  test_acquisition_maximizer.py  test_builder.py  test_decision_maker.py  test_models.py  test_posterior_handler.py  test_search_space.py  test_utility_maximizer.py  test_utils.py  utils.py
tests/test_acquisition_functions/: test_acquisition_functions.py  test_base.py  test_expected_improvement.py  test_probability_of_improvement.py  test_thompson_sampling.py
tests/test_test_functions/: test_continuous_functions.py  test_non_conjugate_functions.py
tests/test_utility_functions/: test_base.py  test_expected_improvement.py  test_probability_of_improvement.py  test_thompson_sampling.py  test_utility_functions.py
